--- a/projects/ixocreate/ngx-admin/src/scss/custom/_layout.scss
+++ b/projects/ixocreate/ngx-admin/src/scss/custom/_layout.scss
@@ -349,6 +349,7 @@
 .input-table {
   margin: 0;
 
+  th,
   .heading {
     background: #f6f6f6;
     font-weight: bold;
@@ -376,7 +377,7 @@
       display: flex;
     }
 
-    &.delete {
+    &.delete-col {
       width: 44px;
       min-width: 44px;
     }
