--- a/projects/ixocreate/ngx-admin/src/lib/forms/types/formly-field-quill/formly-field-quill.component.html
+++ b/projects/ixocreate/ngx-admin/src/lib/forms/types/formly-field-quill/formly-field-quill.component.html
@@ -7,6 +7,7 @@
               [placeholder]="to.placeholder"
               [required]="to.required"
               [class.is-invalid]="showError"
+              [scrollingContainer]="'html'"
               [class.read-only]="to.disabled"
               (onContentChanged)="onContentChanged($event)">
 </quill-editor>
