--- a/projects/ixocreate/ngx-admin/src/scss/custom/_layout.scss
+++ b/projects/ixocreate/ngx-admin/src/scss/custom/_layout.scss
@@ -346,6 +346,12 @@
 //  font-family: monospace;
 //}
 
+body > tr {
+  .table-edit {
+    display: none !important;
+  }
+}
+
 .input-table {
   margin: 0;
 
